[package]
name = "rusty-odo"
version = "0.1.0"
edition = "2021"

[lib]
name="odo"
path="src/lib.rs"

[[bin]]
name="odo"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
uuid = { version = "1.5.0" , features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
lazy_static = "1.4.0"